pvp and pvc working

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon app/index.js"
+        "start": "nodemon app/server.js"
     },
     "repository": {
         "type": "git",
@@ -19,7 +19,8 @@
     },
     "homepage": "https://github.com/tpabarbosa/tic-tac-toe#readme",
     "dependencies": {
-        "express": "^4.17.3"
+        "express": "^4.17.3",
+        "socket.io": "^4.4.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.15"
