--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon app/server.js"
+        "dev": "nodemon app/server.js",
+        "start": "node app/server.js"
     },
     "repository": {
         "type": "git",
